--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,14 @@
 }
 
 
+@font-face {
+  font-family: 'Kramer';
+  src: url('./Kramer.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 :root {
   font-family: 'Libre Baskerville', Georgia, 'Times New Roman', Times, serif;
   line-height: 1.5;
@@ -82,12 +90,12 @@ kbd {
 
 
 .drop-cap::first-letter {
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 200%;
+  font-family: 'Kramer', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 250%;
   line-height: 100%;
   margin-left: 1px;
 
-  color: #BE975F;
+  color: rgba(255, 255, 255, 0.65);
   text-shadow: 2px 2px 5px #1a1a1a;
 }
 
@@ -106,7 +114,9 @@ kbd {
   border-radius: 0.25em;
   margin-top: 1em;
   margin-bottom: 1em;
-  width: 100%;
+  margin-left: 1em;
+  margin-right: 1em;
+  max-width: 60ch;
 }
 
 
