--- a/src/style.css
+++ b/src/style.css
@@ -114,9 +114,7 @@ kbd {
   border-radius: 0.25em;
   margin-top: 1em;
   margin-bottom: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
-  max-width: 60ch;
+  max-width: 100%;
 }
 
 
@@ -489,6 +487,11 @@ button.mobile-command-wrapper {
     justify-content: center;
     align-items: center;
     padding-left: 3em;
+  }
+  .tip {
+    padding-right: 1em;
+    width: 90vw;
+    max-width: 59ch;
   }
 
 }
